--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240909T140348Z
+"   /golfscore                                      20240909T142029Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/37851.html">String.prototype.isRepeated                     : 0037851</a>
 <a href="q/275413.html">Plya trees counted efficiently                  : 0275413</a>
 <a href="q/275350.html">Sylvester primes                                : 0275350</a>
 <a href="q/255650.html">Sum every second digit in a number              : 0255650</a>
