--- a/q/37851.html
+++ b/q/37851.html
@@ -52,7 +52,7 @@
 <pre><code>ṁoEC¹ŀ
 </code></pre>
 <p><a href="https://tio.run/##yygtzv6f@6ip8f/DnY35rs6Hdh5t@P//f7RSYnFKGgwr6Sgd2YIO4YKGRsZwBlAQrhHETkpOSU1Lz1CKBQA" rel="nofollow noreferrer" title="Husk – Try It Online">Try it online!</a></p>
-<p>Takes a string and outputs <code>2</code> if the string could not be made by repetition of a smaller substring (false value). Otherwise the output is any number bigger than <code>2</code>. An empty string will return <code>0</code>.</p>
+<p>Takes a string and outputs <code>2</code> if the string could not be made by repetition of a smaller substring (false value). Otherwise the output is any number greater than <code>2</code>. An empty string will return <code>0</code>.</p>
 <p>Commented version:</p>
 <pre class="lang-python prettyprint-override"><code>     ŀ # Get a range from 1 to the length of the input string
 ṁ      # For each number in that range -
