--- a/q/132981.html
+++ b/q/132981.html
@@ -66,7 +66,7 @@
 <tr d-ix="37"><td>001</td><td>In a lot of cases</td><td>170717T214734Z</td><td><a href="https://codegolf.stackexchange.com/questions/132981/tips-for-golfing-in-x86-x64-machine-code/132983#132983">Govind P</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1>Useful one-byte instructions</h1>
-<p>Most are listed <a href="http://xxeo.com/single-byte-or-small-x86-opcodes" rel="nofollow noreferrer">here</a>. This answer will assume x86 (32-bit), with some notes for x86-64 (<a href="https://codegolf.stackexchange.com/a/275400/17360">usually more bytes</a>). I checked these with Compiler Explorer (godbolt.org) running NASM.</p>
+<p>WIP. Most are listed <a href="http://xxeo.com/single-byte-or-small-x86-opcodes" rel="nofollow noreferrer">here</a>. This answer will assume x86 (32-bit), with some notes for x86-64 (<a href="https://codegolf.stackexchange.com/a/275400/17360">usually more bytes</a>). I checked these with Compiler Explorer (godbolt.org) running NASM.</p>
 <h2>Stack Operations</h2>
 <ul>
 <li><code>PUSH</code>/<code>POP</code>: push/pop any of the eight +rd registers: EAX, ECX, EDX, EBX, ESI, EDI, EBP, ESP.
@@ -121,9 +121,11 @@
 </ul>
 </li>
 </ul>
-<h2>Opcode Prefixes</h2>
-<p><code>REP</code></p>
-<p>WIP</p>
+<h2>Opcode Prefixes (technically one byte)</h2>
+<ul>
+<li><code>REP</code>: Repeat the following string instruction, decrementing counter ECX until ECX = 0. REP can prefix MOVS, LODS, and STOS.</li>
+<li><code>REPZ</code>/<code>REPNZ</code>: Repeat the following string instruction, decrementing ECX, terminating when ECX = 0 OR termination condition (ZF = 0 / ZF = 1). Can prefix  <code>CMPS</code> and <code>SCAS</code>.</li>
+</ul>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.felixcloutier.com/x86/loop:loopcc" rel="nofollow noreferrer"><code>LOOP</code></a> according to ECX</h1>
 <p>This is the <a href="https://stackoverflow.com/questions/35742570/why-is-the-loop-instruction-slow-couldnt-intel-have-implemented-it-efficiently">famously slow</a> instruction that decrements CX/ECX/RCX as a counter, then short jumps if not zero, all in 2 bytes! <code>LOOPcc</code> variants also check ZF. Compare this to regular short branching, which takes 3 bytes:</p>
