--- a/q/132981.html
+++ b/q/132981.html
@@ -120,6 +120,8 @@
 <li>In 64-bit mode,  defaults to 64-bit operands. <code>STOSQ</code> takes 2 bytes.</li>
 </ul>
 </li>
+<li><code>CMPSB</code>/<code>CMPSD</code>: Compare byte/dword in address ESI with byte/dword in address EDI, set flags according to result, and inc/dec registers.</li>
+<li><code>SCASB</code>/<code>SCASD</code>: Compare AL/EAX with byte/dword at EDI, set flags according to result, and inc/dec EDI.</li>
 </ul>
 <h2>Opcode Prefixes (technically one byte)</h2>
 <ul>
