--- a/q/275303.html
+++ b/q/275303.html
@@ -26,19 +26,26 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>076</td><td>JavaScript Node.js + momentjs</td><td>240903T101110Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275318#275318">doubleun</a></td></tr>
-<tr d-ix="1"><td>nan</td><td>C# .NET 6+</td><td>240904T120218Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275348#275348">Arkane</a></td></tr>
-<tr d-ix="2"><td>079</td><td>JavaScript Node.js</td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
-<tr d-ix="3"><td>058</td><td>Charcoal</td><td>240903T222310Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275337#275337">Neil</a></td></tr>
-<tr d-ix="4"><td>134</td><td>Go</td><td>240903T191837Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275332#275332">bigyihsu</a></td></tr>
-<tr d-ix="5"><td>120</td><td>Retina 0.8.2</td><td>240903T175255Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275330#275330">Neil</a></td></tr>
-<tr d-ix="6"><td>nan</td><td>Ruby</td><td>240903T084423Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275317#275317">G B</a></td></tr>
-<tr d-ix="7"><td>128</td><td>Python 3</td><td>240903T025930Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275315#275315">Lucenapo</a></td></tr>
-<tr d-ix="8"><td>086</td><td>JavaScript ES6</td><td>240902T093424Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275307#275307">Arnauld</a></td></tr>
-<tr d-ix="9"><td>052</td><td>05AB1E</td><td>240902T153854Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275310#275310">Kevin Cr</a></td></tr>
-<tr d-ix="10"><td>069</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
+<tr d-ix="0"><td>126</td><td>C clang</td><td>240909T194805Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275441#275441">jdt</a></td></tr>
+<tr d-ix="1"><td>076</td><td>JavaScript Node.js + momentjs</td><td>240903T101110Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275318#275318">doubleun</a></td></tr>
+<tr d-ix="2"><td>nan</td><td>C# .NET 6+</td><td>240904T120218Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275348#275348">Arkane</a></td></tr>
+<tr d-ix="3"><td>079</td><td>JavaScript Node.js</td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
+<tr d-ix="4"><td>058</td><td>Charcoal</td><td>240903T222310Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275337#275337">Neil</a></td></tr>
+<tr d-ix="5"><td>134</td><td>Go</td><td>240903T191837Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275332#275332">bigyihsu</a></td></tr>
+<tr d-ix="6"><td>120</td><td>Retina 0.8.2</td><td>240903T175255Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275330#275330">Neil</a></td></tr>
+<tr d-ix="7"><td>nan</td><td>Ruby</td><td>240903T084423Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275317#275317">G B</a></td></tr>
+<tr d-ix="8"><td>128</td><td>Python 3</td><td>240903T025930Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275315#275315">Lucenapo</a></td></tr>
+<tr d-ix="9"><td>086</td><td>JavaScript ES6</td><td>240902T093424Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275307#275307">Arnauld</a></td></tr>
+<tr d-ix="10"><td>052</td><td>05AB1E</td><td>240902T153854Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275310#275310">Kevin Cr</a></td></tr>
+<tr d-ix="11"><td>069</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (Node.js) + <a href="https://momentjs.com/" rel="nofollow noreferrer">momentjs</a>, 76 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 126 bytes</h1>
+
+<pre class="lang-c prettyprint-override"><code>b[9],o[9],i,m;f(*r,s){for(i=3;i--;r[i]=strcmp(s,o))strptime(s,m=&quot;%y%m%d\0%m%d%y\0%d%m%y&quot;+i*7,b),mktime(b),strftime(o,20,m,b);}
+</code></pre>
+<p><a href="https://tio.run/##tVRNb9pAEL3zK0aWkGwwys4uaepaqBcuPXCtZBEODtipVWyQbVQhxF8v3a8ZR2pCT12E/XbmjXfeM8x2tt3nzevt9rJONvHBXKq4Tstw0sZddCkPbVgtVFrNZmm7rjaLrm@39THs4kMUaXzsq7rQu3oRjM/jerx7FuY6Puv7TqNzMK0mT/FLFNc/LVUjXVZafIiliGudTK@3qumhzqsmjOAyAr1MoC36tdqkZv/wAFX3Pd9Xu2XeF2EghEAlg9hwImIcW11VhsG4Axi@z42mBY66Fhv4CkGZ77sigC8Q9O2pAJ/DOzn5Ti7ggzXj1DYwV@loZLvf/sjbCfRF13frDSzgAqZjvUwrFiChJPEIOYucRSEJKY4pjnGt5FrJtVJ@ZsQ8RTxlK2yzfy9HoAcpNSB/NCI9CCVlNXJZZKHIQpGFIgtFFoosFFkoslD0Qj9sFlk/sn5k/cj60at2iHhKDYgOnCvBiLKPb5DnsXgcxKP8R7PITaAiT3BOMUUvVaun2Pzx05NDSeKzkj2W7LFkjyV7LNljyR5r5K2R3u0Pm5X8EiT/2iS7LcltlObDSBFyLlrEPMU89zzDF4IR8RRn55RVePc3awhURN6ZQ3xMkWMGccz7lCTkk0bS@ZQkJMAiZDRklUP@DAHX1P39j6e@C4Nvjb7rXZatVsslmEuWwXK5WmWZnx2gByyEdlq4caFnhZ0aKUzMPbW76ZSm4juT0a4y1JHY1URD@M5AtNT/NhPh6ozwg1Gko@vo9ntb7vPX7jb79Qc" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (Node.js) + <a href="https://momentjs.com/" rel="nofollow noreferrer">momentjs</a>, 76 bytes</h1>
 <pre><code>m=require('moment')
 f=(a,b,c)=&gt;[a+b+c,c+a+b,c+b+a].map(s=&gt;m(20+s).isValid())
 </code></pre>
@@ -59,7 +66,7 @@ document.write(f('01', '02', '29') + '&lt;br /&gt;')</code></pre>
 </div>
 </p>
 </div>
-<div id="pu1" class="pu"><h1>C# (.NET 6+), 114 bytes (function) or 163 bytes (program)</h1>
+<div id="pu2" class="pu"><h1>C# (.NET 6+), 114 bytes (function) or 163 bytes (program)</h1>
 <pre class="lang-cs prettyprint-override"><code>var f=(string s)=&gt;new[]{&quot;yyMMdd&quot;,&quot;MMddyy&quot;,&quot;ddMMyy&quot;}.Select(x=&gt;DateTime.TryParseExact(s,x,null,0,out _)).ToList();
 </code></pre>
 <p>It takes a string as parameter and returns a list of 3 booleans corresponding to whether the string can be interpreted as {&quot;yyMMdd&quot;, &quot;MMddyy&quot;, &quot;ddMMyy&quot;}, in that order. I added <code>ToList()</code> because <code>Select()</code> returns an <code>IEnumerable</code> that is not computed.<br />
@@ -72,7 +79,7 @@ Because a year on 2 digits is ambiguous, <code>DateTime.Parse()</code> (and simi
 Note that due to TIO limitations (old version of C#/.NET), I added the required usings (but I didn't include them in the bytes count).<br />
 The program takes the first command line argument, and doesn't return the values but prints them to standard output instead.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 79 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 79 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;[2,6,8].map(p=&gt;(new Date(4+[2,0,8].map(q=&gt;s[i=(p^q)%6]+s[i+1]))+0)[8]==s[i])
 </code></pre>
@@ -101,7 +108,7 @@ The program takes the first command line argument, and doesn't return the values
 </code></pre>
 <p><a href="https://tio.run/##fZZdbptAFIXfs4qRJcczMiGeO7Zr0uA8tRvIo@soxMGUihibwUhW064gUl/62O6j68kGugR3hqaVCT4DEiA@zv0ZzrX5FFWRXhTpujxb5ffxfhnudTidkTf2JnP/IVrzdTjlSbgJp1XY177e3umy4Hx9sxHdsUfi8TERt7eXUp1S0OfVGV2pm69VNziVFwkn0R1eSjFN@ESIfRFvtmkR885Sd4RfxNH9@zSLr3erBR8Iv8yvyyJdJVz4ep2lJe98WJnHlnnxLlp85CYrC6fs8wljWVyyGdMe830/YnMWMgNfROesfy4885DdilgbuORavDV3FvlK51nsZ3nCjdjA@uDHVVzsOK88lgqbomJhyHg0S@f2olMW27gjBLtivd@/vj3/@G6OPXbBes8/n3om8BexH9QbY8so03HzdFIjiVkQQCYdMaWNaUtjxxhhphw6RTifo05y1EmOOokmDmbyPUS7u2MxFc6nBi6Ga1HKxeC6SGlrOa6ThGMahmJKh5ekw0vS4SXZ8NJLSfb0F8nGvQYiiBRWHfT2Gh2U@AoRrpBwhYceaiGYS@FcCudSyoFgy8MDh7SQRKoRzjWCuRqOayGsgi9FHlmof5aSqi37z4ZYpyTWKfxTIoej8RvEggBanxzjRI5xIsc4ER4nwuNEeJwMQj4mPGmEJ43wpBGeNIKTJsnuGCmIgPtrhHOBviwCfdkikOlqJjFDhjRsiGMq6WI4Jja5bQ6ZznYHdQqb1Xbe1tVLFgT4M8IwQp8RQdB4rW0mHQz87dVMIQaX5Q8" rel="nofollow noreferrer">Modifying Arnauld's also result 88, with <code>maybe</code> be <code>false</code></a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 58 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 58 bytes</h1>
 <pre><code>Ｆ¹⁰⁰Ｆ¹²Ｆ⎇⊖κ⁺²⁸¬﹪ι⁴⁻³¹﹪﹪κ⁷¦²⊞υ⟦ι⊕κ⊕λ⟧⭆⪪⭆”)∨^⍘”§⪪θ²Ｉι⁶№υＩ⪪ι²
 </code></pre>
 <p><a href="https://tio.run/##VU67bsMwDNz7FYQnClABWQn6gKegXTI4MJBsRQfBVmMhqpTKUpB@vcrEGtyB4B3veGQ/qtB7ZXP@8gGwFoLBjGQBBx2cCr/4rvugv7WLesAT49DZNKF84bDzEVs/JOvRcFgzRmJrHKmrmtCslHbi8EyyJBODLk0jJg4ftLZ1/9OX3LJP1jx0wbiI@0jt2Koz7s/WLHklaimpalFx2MStG/S1mH5uFzm8qSmiuf/3dKM@UWAq89lpym@syVm@CinX@fFi/wA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs three <code>0</code>s or <code>1</code>s depending on whether the input is in <code>YYMMDD</code>, <code>MMDDYY</code> or <code>DDMMYY</code> respectively. Explanation: Inspired by @KevinCruijssen's 05AB1E answer.</p>
@@ -121,7 +128,7 @@ The program takes the first command line argument, and doesn't return the values
 </code></pre>
 <p>Use the compressed string <code>012201210</code> to rearrange the input from <code>YYMMDD</code>, <code>MMDDYY</code> or <code>DDMMYY</code> into <code>YYMMDD</code>, then split each arrangement into a triplet and check whether they are in the list.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 134 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 134 bytes</h1>
 <pre class="lang-go prettyprint-override"><code>import.&quot;time&quot;
 func f(d string)(b[]bool){for _,F:=range[]string{&quot;060102&quot;,&quot;010206&quot;,&quot;020106&quot;}{_,e:=Parse(F,d);b=append(b,e==nil)}
 return}
@@ -136,7 +143,7 @@ return}
 <p>The solution uses the fact that <code>time.Parse</code> returns an error if the parsing fails; checking if it's nil allows for checking if parsing succeeded.</p>
 <p>Takes in the date as a string, and returns a slice of bools. Returns <em>true</em> for the maybe cases.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 120 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 120 bytes</h1>
 <pre><code>(..)(..)
 $'$2$1¶$'$&amp;¶$&amp;
 %`([02468][048]|[13579][26])0229|..(?!0229|023|(0[469]|11)31)(0[1-9]|1[0-2])(?!00)([0-2].|30|31)
@@ -159,13 +166,13 @@ $'$2$1¶$'$&amp;¶$&amp;
 </code></pre>
 <p>Check that the month is 1-12 and the day is 0-31 but not 0.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>71</s> 61+4=65 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>71</s> 61+4=65 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;a,b,c{[a+b+c,c+a+b,c+b+a].map{|x|!!Date.parse(x)rescue !0}}
 </code></pre>
 <p><a href="https://tio.run/##fZbrbptAEIX/9ymwVEWmEOyZsdvQlPzqWxBULRhLkeIbENVR8KuX7JKkMsFnjOSV@DhzWc7YWz3lz9066a7vTJiHxUtqgjwowiKwq/3OA5NFG7N/aY/tZPLbNGW0N1VdTo9@VdbFU@lN5qdT9/VX9PiwLeuPR/tY4So5RnVhttPZ/Spo02a9ye7/BjP/9pCs02/mnUXRzM9uD046vfrZ7P7UfpKkvT7z2tbbT1MTeoPH36KHh8w/dfP@43lr81iXw@VLjwizOIaMlJjkYjaVbf4SY8xE0QnjfEqdrNTJSp3MNwqz@TbmOb8UU3A@mWsM1yKiMbgvRK6WyzpiHNMyFJMUL5HiJVK8RAMvvZfkljdEg3sDxBAJVp319hmdlfgJMa6QcYXnHhohmEtwLsG5RBQEW16cOWSECKmWONcS5ho4boSwCr4UurBRH5YiGcv@swXWCWGd4J8SWiy//0AsjqH1WRknVsaJlXFiPE6Mx4nxOFmEfMx40hhPGuNJYzxpDCeN2F0YCUTA/T3CuUBfDoG@XBHIdD0jzJAhLVvgmEIawzGxyV1zyHSuO6gTbFbX@VjXb1kc42OEZYyOEXE8eK1jRgoDf3s9E8Twtvzb7ZuH3bburquVPRm@Ag" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 128 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 128 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda y,m,d:(0&lt;m&lt;13)*(0&lt;d&lt;(62648012&gt;&gt;2*m&amp;3)+29or((y%4,m,d)==(0,2,29))*(2-0**y)/2)
 g=lambda y,m,d:(f(y,m,d),f(d,y,m),f(d,m,y))
@@ -173,7 +180,7 @@ g=lambda y,m,d:(f(y,m,d),f(d,y,m),f(d,m,y))
 <p><a href="https://tio.run/##bZBBbsMgFET3nIJNKyCkBexGjWOy7CUsL2iB1FIxFiZSOb2LXbJoVNiM5s0ffZhS/PRjtSxWfin3rhVM1FHdINa6lleYZKFbdBCH@pVxcT4L4h4rvBNHHxBKD/WaxlIiRgUVR5wHxJ4RkvCzwOByV2rRJjC1SNMsf4WjCePFBu@gVtHEwRk4uMmHSIA2Fr6VqQbAfGJIzRor5imYeA0j5Bs03x9mik3xGLDi7wYdo08vlOXL@26@OpS7d4pwxrYy6wNUcBg7nl9T0brHPVi9lD0Y1HgxKEfLIitw/4Eb1HdQzbMJEd4@QUorilx@AA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 <p><code>f</code> returns <code>1</code> if <code>y,m,d</code> is valid, <code>0</code> if <code>y,m,d</code> is invalid and <code>0.5</code> if <code>y,m,d</code> is maybe valid.</p>
 </div>
-<div id="pu8" class="pu"><h1>JavaScript (ES6), 86 bytes</h1>
+<div id="pu9" class="pu"><h1>JavaScript (ES6), 86 bytes</h1>
 <p><em>A mix of my previous answer with <a href="https://codegolf.stackexchange.com/a/275304/58563">@l4m2's answer</a>.</em></p>
 <p>Expects a string of 6 digits.</p>
 <p>Returns a triplet <code>[YYMMDD, MMDDYY, DDMMYY]</code> of Boolean values (<em>true</em> for <em>valid</em>). Returns <em>valid</em> for the <em>&quot;maybe&quot;</em> cases.</p>
@@ -285,7 +292,7 @@ g=lambda y,m,d:(f(y,m,d),f(d,y,m),f(d,m,y))
 )                  // end of map()
 </code></pre>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 52 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu10" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 52 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>11Ýε7%É31αyΘ-LтL&lt;ây&gt;δšʒ`4Ör&lt;s29QP≠]€`T‰JD2δ.IDí)JQ€à
 </code></pre>
 <p><a href="https://tio.run/##AVoApf9vc2FiaWX//zExw53OtTclw4kzMc6xec6YLUzRgkw8w6J5Ps60xaHKkmA0w5ZyPHMyOVFQ4omgXVTigLBK4oKsYEQyzrQuSUTDrSlKUeKCrMOg//8xMjEyMzE" rel="nofollow noreferrer">Try it online.</a> (No test suite, since it's too slow to run more than 2-3 test cases at once.</p>
@@ -346,7 +353,7 @@ T‰            # Divmod each inner-most value by 10
               # (after which the resulting triplet is output implicitly)
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1>Google Sheets, 69 bytes</h1>
+<div id="pu11" class="pu"><h1>Google Sheets, 69 bytes</h1>
 <pre><code>=bycol({A3,C3,C3;B3,A3,B3;C3,B3,A3},lambda(_,isdate(20&amp;join(&quot;-&quot;,_))))
 </code></pre>
 <p>Put the three date components in cells <code>A3:C3</code> as in <code>24</code>, <code>12</code>, <code>31</code> and the formula in cell <code>H3</code>.</p>
