--- a/q/275303.html
+++ b/q/275303.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>126</td><td>C clang</td><td>240909T194805Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275441#275441">jdt</a></td></tr>
+<tr d-ix="0"><td>125</td><td>C clang</td><td>240909T194805Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275441#275441">jdt</a></td></tr>
 <tr d-ix="1"><td>076</td><td>JavaScript Node.js + momentjs</td><td>240903T101110Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275318#275318">doubleun</a></td></tr>
 <tr d-ix="2"><td>nan</td><td>C# .NET 6+</td><td>240904T120218Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275348#275348">Arkane</a></td></tr>
 <tr d-ix="3"><td>079</td><td>JavaScript Node.js</td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
@@ -39,11 +39,11 @@
 <tr d-ix="10"><td>052</td><td>05AB1E</td><td>240902T153854Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275310#275310">Kevin Cr</a></td></tr>
 <tr d-ix="11"><td>069</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 126 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 125 bytes</h1>
 
-<pre class="lang-c prettyprint-override"><code>b[9],o[9],i,m;f(*r,s){for(i=3;i--;r[i]=strcmp(s,o))strptime(s,m=&quot;%y%m%d\0%m%d%y\0%d%m%y&quot;+i*7,b),mktime(b),strftime(o,20,m,b);}
+<pre class="lang-c prettyprint-override"><code>b[9],o[7],i,m;f(*r,s){for(i=3;i--;r[i]=strcmp(s,o))strptime(s,m=&quot;%y%m%d\0%m%d%y\0%d%m%y&quot;+i*7,b),mktime(b),strftime(o,7,m,b);}
 </code></pre>
-<p><a href="https://tio.run/##tVRNb9pAEL3zK0aWkGwwys4uaepaqBcuPXCtZBEODtipVWyQbVQhxF8v3a8ZR2pCT12E/XbmjXfeM8x2tt3nzevt9rJONvHBXKq4Tstw0sZddCkPbVgtVFrNZmm7rjaLrm@39THs4kMUaXzsq7rQu3oRjM/jerx7FuY6Puv7TqNzMK0mT/FLFNc/LVUjXVZafIiliGudTK@3qumhzqsmjOAyAr1MoC36tdqkZv/wAFX3Pd9Xu2XeF2EghEAlg9hwImIcW11VhsG4Axi@z42mBY66Fhv4CkGZ77sigC8Q9O2pAJ/DOzn5Ti7ggzXj1DYwV@loZLvf/sjbCfRF13frDSzgAqZjvUwrFiChJPEIOYucRSEJKY4pjnGt5FrJtVJ@ZsQ8RTxlK2yzfy9HoAcpNSB/NCI9CCVlNXJZZKHIQpGFIgtFFoosFFkoslD0Qj9sFlk/sn5k/cj60at2iHhKDYgOnCvBiLKPb5DnsXgcxKP8R7PITaAiT3BOMUUvVaun2Pzx05NDSeKzkj2W7LFkjyV7LNljyR5r5K2R3u0Pm5X8EiT/2iS7LcltlObDSBFyLlrEPMU89zzDF4IR8RRn55RVePc3awhURN6ZQ3xMkWMGccz7lCTkk0bS@ZQkJMAiZDRklUP@DAHX1P39j6e@C4Nvjb7rXZatVsslmEuWwXK5WmWZnx2gByyEdlq4caFnhZ0aKUzMPbW76ZSm4juT0a4y1JHY1URD@M5AtNT/NhPh6ozwg1Gko@vo9ntb7vPX7jb79Qc" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##hVTBjpswEL3nKyxLSJA4EjPONqUo6iWXHvIBKMuBzYYtaiAREFVRlF8vNbZnqNTu1lHw88wb2@@B5rA8nIrmbRhe9kmuzvt1ripVp2U4b1UX3ctzG1YbnVbLZdruq3zT9e2hvoSdOkeRwZe@qo9mVW9kcAvq4PU5Hp/BzcyvBt3kopqv1Uuk6h@WapApKy0@q7WqTS59DFXTi7qomjAS95kw4/C9aOeiP3Z9t8/FRtyFjO2QyiMglCQeAWeBsxAjIc0xzTGuRa5FrkX8zIh5mnjaVtjL/j0cgTbSekL@aADaCJCyBrkssFBgocBCgYUCCwUWCiwUWCh4oe9eFlg/sH5g/cD6wat2iHhaT4gOXOmYEWWf/kCex@JhEg/4n8sCXwI0eQIriml6qUY9xVZPn9YOJYnPInuM7DGyx8geI3uM7LFB3hr0br97WeSXgPy1IbuN5Dbg@GOkCTkXLWKeZp7bb@THMSPiac6uKKvhw292JFAReTce4mOaHBsRx7xPSUI@GYTOpyQhARYBoymrHfJnxOKRzuztLte@C@W3xsxmlWW73XYrxkeWie12t8syGaWWaTqUCG23cO3C9ArbNVIxH@fUrhYL6ivjGJtNe@z3Ok85VoYmolxNNIUvrSGXoQw6Iab/cyM9VdmN4lx8FbIsTt1Rii9C9u31KKTLwQc5/EeOdD2cEYZ2bRsRp7PHbPh1KE/FWzcsf/4G" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1>JavaScript (Node.js) + <a href="https://momentjs.com/" rel="nofollow noreferrer">momentjs</a>, 76 bytes</h1>
 <pre><code>m=require('moment')
