--- a/q/62732.html
+++ b/q/62732.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>034</td><td>Boo</td><td>160203T193607Z</td><td><a href="https://codegolf.stackexchange.com/questions/62732/implement-a-truth-machine/70959#70959">user4594</a></td></tr>
-<tr d-ix="1"><td>678</td><td>Qdeql</td><td>240908T153854Z</td><td><a href="https://codegolf.stackexchange.com/questions/62732/implement-a-truth-machine/275414#275414">Bbrk24</a></td></tr>
+<tr d-ix="0"><td>531</td><td>Qdeql</td><td>240908T153854Z</td><td><a href="https://codegolf.stackexchange.com/questions/62732/implement-a-truth-machine/275414#275414">Bbrk24</a></td></tr>
+<tr d-ix="1"><td>034</td><td>Boo</td><td>160203T193607Z</td><td><a href="https://codegolf.stackexchange.com/questions/62732/implement-a-truth-machine/70959#70959">user4594</a></td></tr>
 <tr d-ix="2"><td>012</td><td>Befalse quirkster</td><td>240523T000516Z</td><td><a href="https://codegolf.stackexchange.com/questions/62732/implement-a-truth-machine/273254#273254">Bubbler</a></td></tr>
 <tr d-ix="3"><td>005</td><td>Easyfuck</td><td>240325T011752Z</td><td><a href="https://codegolf.stackexchange.com/questions/62732/implement-a-truth-machine/272065#272065">Quadrupl</a></td></tr>
 <tr d-ix="4"><td>005</td><td>Uiua</td><td>240320T014712Z</td><td><a href="https://codegolf.stackexchange.com/questions/62732/implement-a-truth-machine/271989#271989">noodle p</a></td></tr>
@@ -523,15 +523,10 @@
 <tr d-ix="494"><td>030</td><td>Ruby</td><td>151103T165157Z</td><td><a href="https://codegolf.stackexchange.com/questions/62732/implement-a-truth-machine/62741#62741">Peter Le</a></td></tr>
 <tr d-ix="495"><td>006</td><td>Foo</td><td>151103T164754Z</td><td><a href="https://codegolf.stackexchange.com/questions/62732/implement-a-truth-machine/62739#62739">Sp3000</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h2><a href="https://github.com/boo-lang/boo" rel="nofollow noreferrer">Boo</a>, 34 bytes</h2>
-<pre><code>def f(x):
- print x;while x:print x
+<div id="pu0" class="pu"><h1><a href="https://esolangs.org/wiki/Qdeql" rel="nofollow noreferrer">Qdeql</a>, <s>678</s> 531 bytes</h1>
+<pre><code>&amp;------------------------------------------------\=\/-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=*/------------------------------------------------\=/=\--\/\/=/*
 </code></pre>
-<p>Boo is a language inspired by Python and implemented in .NET. Its syntax is very similar to Python 2's.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://esolangs.org/wiki/Qdeql" rel="nofollow noreferrer">Qdeql</a>, 678 bytes</h1>
-<pre><code>&amp;------------------------------------------------\=\/-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=*/----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*
-</code></pre>
+<p>-147 by computing the ASCII 0 as (0 - 208) rather than putting 48 directly</p>
 <p>Explanation:</p>
 <pre><code>&amp; get input
 ---------- ---------- ---------- ---------- -------- subtract 48
@@ -548,14 +543,17 @@
   * print the ASCII 1
 / end while
 get an ASCII 0:
----------- ---------- ---------- ---------- ----------
----------- ---------- ---------- ---------- ----------
----------- ---------- ---------- ---------- ----------
----------- ---------- ---------- ---------- ----------
---------
+---------- ---------- ---------- ---------- --------
+\=/= \--\/\/=/
 * print it
 </code></pre>
 <p>Motivation is a funny thing. If you had asked me last year if I wanted to write Qdeql code the answer would be no. But I need test cases for my interpreter, and Ørjan's transpiler from Brainfuck generates code that's too verbose to run in a reasonable amount of time.</p>
+</div>
+<div id="pu1" class="pu"><h2><a href="https://github.com/boo-lang/boo" rel="nofollow noreferrer">Boo</a>, 34 bytes</h2>
+<pre><code>def f(x):
+ print x;while x:print x
+</code></pre>
+<p>Boo is a language inspired by Python and implemented in .NET. Its syntax is very similar to Python 2's.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.quirkster.com/iano/js/befalse.html" rel="nofollow noreferrer">Befalse (quirkster)</a>, 12 bytes</h1>
 <pre><code>,!/$.$1!
