--- a/q/62732.html
+++ b/q/62732.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>531</td><td>Qdeql</td><td>240908T153854Z</td><td><a href="https://codegolf.stackexchange.com/questions/62732/implement-a-truth-machine/275414#275414">Bbrk24</a></td></tr>
+<tr d-ix="0"><td>273</td><td>Qdeql</td><td>240908T153854Z</td><td><a href="https://codegolf.stackexchange.com/questions/62732/implement-a-truth-machine/275414#275414">Bbrk24</a></td></tr>
 <tr d-ix="1"><td>034</td><td>Boo</td><td>160203T193607Z</td><td><a href="https://codegolf.stackexchange.com/questions/62732/implement-a-truth-machine/70959#70959">user4594</a></td></tr>
 <tr d-ix="2"><td>012</td><td>Befalse quirkster</td><td>240523T000516Z</td><td><a href="https://codegolf.stackexchange.com/questions/62732/implement-a-truth-machine/273254#273254">Bubbler</a></td></tr>
 <tr d-ix="3"><td>005</td><td>Easyfuck</td><td>240325T011752Z</td><td><a href="https://codegolf.stackexchange.com/questions/62732/implement-a-truth-machine/272065#272065">Quadrupl</a></td></tr>
@@ -523,23 +523,24 @@
 <tr d-ix="494"><td>030</td><td>Ruby</td><td>151103T165157Z</td><td><a href="https://codegolf.stackexchange.com/questions/62732/implement-a-truth-machine/62741#62741">Peter Le</a></td></tr>
 <tr d-ix="495"><td>006</td><td>Foo</td><td>151103T164754Z</td><td><a href="https://codegolf.stackexchange.com/questions/62732/implement-a-truth-machine/62739#62739">Sp3000</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://esolangs.org/wiki/Qdeql" rel="nofollow noreferrer">Qdeql</a>, <s>678</s> 531 bytes</h1>
-<pre><code>&amp;------------------------------------------------\=\/-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=*/------------------------------------------------\=/=\--\/\/=/*
+<div id="pu0" class="pu"><h1><a href="https://esolangs.org/wiki/Qdeql" rel="nofollow noreferrer">Qdeql</a>, <s>678</s> <s>531</s> 273 bytes</h1>
+<pre><code>&amp;------------------------------------------------\=-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==-==\-=-\/\/==/*/------------------------------------------------\=/=\--\/\/=/*
 </code></pre>
-<p>-147 by computing the ASCII 0 as (0 - 208) rather than putting 48 directly</p>
+<p>-147 by computing the ASCII 0 as (0 - 208) rather than putting 48 directly<br />
+-258 by computing the ASCII 1 similarly</p>
 <p>Explanation:</p>
 <pre><code>&amp; get input
 ---------- ---------- ---------- ---------- -------- subtract 48
 \ while not 0:
   queue must be 1 0 0 now
   = skip the 1
-  \/ throw out a 0
   get an ASCII 1:
-  -=-=-=-=-=-=-=-=-=-= -=-=-=-=-=-=-=-=-=-= -=-=-=-=-=-=-=-=-=-= -=-=-=-=-=-=-=-=-=-= -=-=-=-=-=-=-=-=-=-=
-  -=-=-=-=-=-=-=-=-=-= -=-=-=-=-=-=-=-=-=-= -=-=-=-=-=-=-=-=-=-= -=-=-=-=-=-=-=-=-=-= -=-=-=-=-=-=-=-=-=-=
-  -=-=-=-=-=-=-=-=-=-= -=-=-=-=-=-=-=-=-=-= -=-=-=-=-=-=-=-=-=-= -=-=-=-=-=-=-=-=-=-= -=-=-=-=-=-=-=-=-=-=
-  -=-=-=-=-=-=-=-=-=-= -=-=-=-=-=-=-=-=-=-= -=-=-=-=-=-=-=-=-=-= -=-=-=-=-=-=-=-=-=-= -=-=-=-=-=-=-=-=-=-=
-  -=-=-=-=-=-=-=
+  -==-==-==-==-==-==-==-==-==-==
+  -==-==-==-==-==-==-==-==-==-==
+  -==-==-==-==-==-==-==-==-==-==
+  -==-==-==-==-==-==-==-==-==-==
+  -==-==-==-==-==-==-==-==-==
+  \-=-\/\/==/
   * print the ASCII 1
 / end while
 get an ASCII 0:
