--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240909T223210Z
+"   /golfscore                                      20240910T003542Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/229295.html">Simplify K combinatory logic expression         : 0229295</a>
 <a href="q/93651.html">Expand the variadic expression                  : 0093651</a>
 <a href="q/62732.html">Implement a Truth-Machine                       : 0062732</a>
 <a href="q/233618.html">Distances between keys on a QWERTY keyboard     : 0233618</a>
