--- a/q/229295.html
+++ b/q/229295.html
@@ -26,17 +26,26 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>020</td><td>Jelly</td><td>240910T003542Z</td><td><a href="https://codegolf.stackexchange.com/questions/229295/simplify-k-combinatory-logic-expression/275442#275442">Unrelate</a></td></tr>
-<tr d-ix="1"><td>027</td><td>Perl 5 p</td><td>210609T001143Z</td><td><a href="https://codegolf.stackexchange.com/questions/229295/simplify-k-combinatory-logic-expression/229296#229296">Anders K</a></td></tr>
-<tr d-ix="2"><td>064</td><td>Haskell</td><td>210610T043959Z</td><td><a href="https://codegolf.stackexchange.com/questions/229295/simplify-k-combinatory-logic-expression/229369#229369">Unrelate</a></td></tr>
-<tr d-ix="3"><td>082</td><td>Python 3</td><td>210609T025931Z</td><td><a href="https://codegolf.stackexchange.com/questions/229295/simplify-k-combinatory-logic-expression/229305#229305">Unrelate</a></td></tr>
-<tr d-ix="4"><td>021</td><td>Jelly</td><td>210609T122450Z</td><td><a href="https://codegolf.stackexchange.com/questions/229295/simplify-k-combinatory-logic-expression/229328#229328">Nick Ken</a></td></tr>
-<tr d-ix="5"><td>070</td><td>JavaScript ES2019</td><td>210609T030033Z</td><td><a href="https://codegolf.stackexchange.com/questions/229295/simplify-k-combinatory-logic-expression/229306#229306">tsh</a></td></tr>
-<tr d-ix="6"><td>043</td><td>Retina 0.8.2</td><td>210609T092904Z</td><td><a href="https://codegolf.stackexchange.com/questions/229295/simplify-k-combinatory-logic-expression/229318#229318">Neil</a></td></tr>
-<tr d-ix="7"><td>137</td><td>Haskell</td><td>210609T090923Z</td><td><a href="https://codegolf.stackexchange.com/questions/229295/simplify-k-combinatory-logic-expression/229317#229317">Wheat Wi</a></td></tr>
-<tr d-ix="8"><td>190</td><td>Python 3</td><td>210609T001731Z</td><td><a href="https://codegolf.stackexchange.com/questions/229295/simplify-k-combinatory-logic-expression/229297#229297">hyper-ne</a></td></tr>
+<tr d-ix="0"><td>060</td><td>Curry PAKCS</td><td>240910T031657Z</td><td><a href="https://codegolf.stackexchange.com/questions/229295/simplify-k-combinatory-logic-expression/275443#275443">alephalp</a></td></tr>
+<tr d-ix="1"><td>020</td><td>Jelly</td><td>240910T003542Z</td><td><a href="https://codegolf.stackexchange.com/questions/229295/simplify-k-combinatory-logic-expression/275442#275442">Unrelate</a></td></tr>
+<tr d-ix="2"><td>027</td><td>Perl 5 p</td><td>210609T001143Z</td><td><a href="https://codegolf.stackexchange.com/questions/229295/simplify-k-combinatory-logic-expression/229296#229296">Anders K</a></td></tr>
+<tr d-ix="3"><td>064</td><td>Haskell</td><td>210610T043959Z</td><td><a href="https://codegolf.stackexchange.com/questions/229295/simplify-k-combinatory-logic-expression/229369#229369">Unrelate</a></td></tr>
+<tr d-ix="4"><td>082</td><td>Python 3</td><td>210609T025931Z</td><td><a href="https://codegolf.stackexchange.com/questions/229295/simplify-k-combinatory-logic-expression/229305#229305">Unrelate</a></td></tr>
+<tr d-ix="5"><td>021</td><td>Jelly</td><td>210609T122450Z</td><td><a href="https://codegolf.stackexchange.com/questions/229295/simplify-k-combinatory-logic-expression/229328#229328">Nick Ken</a></td></tr>
+<tr d-ix="6"><td>070</td><td>JavaScript ES2019</td><td>210609T030033Z</td><td><a href="https://codegolf.stackexchange.com/questions/229295/simplify-k-combinatory-logic-expression/229306#229306">tsh</a></td></tr>
+<tr d-ix="7"><td>043</td><td>Retina 0.8.2</td><td>210609T092904Z</td><td><a href="https://codegolf.stackexchange.com/questions/229295/simplify-k-combinatory-logic-expression/229318#229318">Neil</a></td></tr>
+<tr d-ix="8"><td>137</td><td>Haskell</td><td>210609T090923Z</td><td><a href="https://codegolf.stackexchange.com/questions/229295/simplify-k-combinatory-logic-expression/229317#229317">Wheat Wi</a></td></tr>
+<tr d-ix="9"><td>190</td><td>Python 3</td><td>210609T001731Z</td><td><a href="https://codegolf.stackexchange.com/questions/229295/simplify-k-combinatory-logic-expression/229297#229297">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 20 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.informatik.uni-kiel.de/%7Epakcs/index.html" rel="nofollow noreferrer">Curry (PAKCS)</a>, 60 bytes</h1>
+<pre><code>f&quot;K&quot;=&quot;K&quot;
+f('@':a++b)=(f a!)$!f b
+&quot;K&quot;!b=&quot;@K&quot;++b
+(&quot;@K&quot;++a)!_=a
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m706ubSoqDK-IDE7uXjBgqWlJWm6Fjdt0pS8lWyBmCtNQ91B3SpRWztJ01YjTSFRUVNFMU0hiQsop5hkq-TgrQSU4tKAMBI1FeNtEyFmbMtNzMxTsFVIU1ByAAJvbyDy9laCSMIsAgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 20 bytes</h1>
 <pre><code>OḂU;Ṫ’o+ɗṪṭƲṛ?/ṬCṫ@Q
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/9//4Y6mUOuHO1c9apiZr31yOpD1cOfaY5se7pxtr/9w5xrnhztXOwT@P9yuGfn/fzSXkreSDpeSgzeUgjGANJwJ5cCVgPjeSErBXCjpjdAE1wemIWwHJHUOYCOgmh3gKqDKoFZAOQ4oPIRpEOtiAQ" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -59,7 +68,7 @@
 </code></pre>
 <p>This essentially treats <code>@K</code> as an &quot;increment&quot; instruction, <code>K</code> as the number 1, and <code>@</code> on anything other than <code>K</code>/1 as &quot;decrement top and pop second from top&quot;.</p>
 </div>
-<div id="pu1" class="pu"><h1 id="perl-5-p-28-27-bytes-dj1f"><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-p</code>, <s>28</s> 27 bytes</h1>
+<div id="pu2" class="pu"><h1 id="perl-5-p-28-27-bytes-dj1f"><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-p</code>, <s>28</s> 27 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>s/@(.K)(\1*K)\1*K/$2/&amp;&amp;redo
 </code></pre>
@@ -68,7 +77,7 @@
 <p>Each term in the <span class="math-container">\$K\$</span> calculus normalizes to <span class="math-container">\$a_i = (\texttt{@K})^i\texttt K\$</span> for some <span class="math-container">\$i \ge 0\$</span>, because <span class="math-container">\$\texttt K = a_0\$</span>, <span class="math-container">\$\texttt @a_0a_j = a_{j + 1}\$</span>, and <span class="math-container">\$\texttt @a_{i + 1}a_j \to a_i\$</span>.  So the innermost redex always looks like <span class="math-container">\$\texttt @(\texttt{@K})^{i + 1}\texttt K(\texttt{@K})^j\texttt K\$</span> for some <span class="math-container">\$i, j \ge 0\$</span>, and reduces to <span class="math-container">\$(\texttt{@K})^i\texttt K\$</span>.</p>
 <p>To avoid the need to escape <code>@K</code> (which would otherwise refer to an array) as <code>\@K</code>, we relax it to <code>.K</code>, using backreferences for further copies.  This doesn’t introduce bugs because any invalid redex <span class="math-container">\$\texttt @(\texttt{KK})^{i + 1}\texttt K(\texttt{KK})^j\texttt K\$</span> must be preceded by a valid redex <span class="math-container">\$\texttt @(\texttt{@K})^{i + 1}\texttt K(\texttt{@K})^j\texttt K\$</span>.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s>68</s> 64 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s>68</s> 64 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>head.foldr(#)[]
 'K'#s=&quot;K&quot;:s
@@ -95,7 +104,7 @@ a#               -- If it's something else (that is, '@', which we bind to a),
             =u:s -- and yield u prepended to s.
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 82 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 82 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>import re
 def f(e,n=1):
@@ -144,7 +153,7 @@ def f(e,n=1):
 <p><em>-1 porting ovs's golf</em></p>
 <p><em>-5 porting Wheat Wizard's second golf to my Haskell solution</em></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>22</s> 21 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>22</s> 21 bytes</h1>
 <pre><code>Ṫṫ3ȯṪ⁾0K;Ɗṭ
 ṚṭÇ}V?@/Ṛ
 </code></pre>
@@ -171,7 +180,7 @@ def f(e,n=1):
         Ṛ | Finally reverse, and implicitly smash together and print
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1>JavaScript (ES2019), 70 bytes</h1>
+<div id="pu6" class="pu"><h1>JavaScript (ES2019), 70 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;(i=0,T=(p=s[i++],N=p&lt;s?[p,p=T(),T()]:[p])=&gt;p[1]&gt;s?p[2]:N)().flat(i)
 </code></pre>
@@ -214,7 +223,7 @@ i) // `i` would equals to length of original string
 <p><a href="https://tio.run/##fY7dCgIhEIXve47AMWqXuqysufcVuhHTKGRddqLXN9eG7QcMZHTON3OON/MwZIdrf1918eySV/mQOtAeSFEzuD4Y66BFQC3htF5oOZZ2KeYbIeXRA8ktJRs7isE1IV7Ag9AZ7WY/IuqKXANZryKGVcuR6z/WBXPV9ZApp9yvN37sYYlgM5wmeIy/wA1@dW83jk9P" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>The regex used in <a href="https://codegolf.stackexchange.com/a/229296/44718">this Perl answer</a>.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 43 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 43 bytes</h1>
 <pre><code>+`@@K(((@)|(?&lt;-3&gt;K))*(?(3)$)K){2}(?&lt;-1&gt;)
 $1
 </code></pre>
@@ -225,7 +234,7 @@ $2
 </code></pre>
 <p><a href="https://tio.run/##K0otycxL/P9fO8FBw8FbUyPGUMtbE0RwqRj9/@/N5eANwmASSEBoKAsiA@J4w1SA2VDSG6oWrhxMQ9gOSIocwJqhOh3gKqDKoIZDOQ4oPIRpQFUA" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Link includes test cases.</p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 137 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://www.haskell.org/" rel="noreferrer">Haskell</a>, 137 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>p('K':x)=(K,x)
 p(_:x)|(s,z)&lt;-p x,(u,v)&lt;-p z=(s:@u,v)
@@ -234,10 +243,10 @@ f(x:@y)|K&lt;-x=&quot;@K&quot;++f y|K:@z&lt;-x=f z|(u,_)&lt;-p$f x=f$u:@y
 f K=&quot;K&quot;
 f.fst.p
 </code></pre>
-<p><a href="https://tio.run/##JYxBCsMgFET3nkJEiBKTA0gE95@cIQjtp6FpkWqKEe9uTTqrmcfwHi4879tWqxcddDpJI0AlSbxY2igiqCynwdOkxK6@V81GBG3PRW4uOjobKLO2M0GRtD1kgWlIhllgfY/0KKBtPgnSXJpkOSUcaQN8b3@CFAwDRqLBEUMcfX259W38Z31Hjrwh7pm9Av@w@gM" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##JYxBCsMgFET3nkJEiBKTA0gE95@cIQjtp6FpkWqKEe9uTTqrmcfwHi4879tWqxcddDpJI0AlSbxY2igiqCynwdOkxK6@V81GBG3PRW4uOjobKLO2M0GRtD1kgWlIhllgfY/0KKBtPgnSXJpkOSUcaQN8b3@CFAwDRqLBEUMcfX259W38Z31Hjrwh7pm9Av@w@gM" rel="noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
 <p>This one actually parses the strings into a tree.  I'm sure this is not the most efficient way to do this but I actually couldn't beat it.  <code>p</code> is our parser, and <code>f</code> performs the actual function.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 190 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 190 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda x:h(c(g(x)))
 g=lambda x:x.pop(0)&gt;&quot;@&quot;and&quot;K&quot;or[g(x),g(x)]
