--- a/q/92101.html
+++ b/q/92101.html
@@ -26,19 +26,30 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>011</td><td>Husk</td><td>240910T080322Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/275447#275447">int 21h </a></td></tr>
-<tr d-ix="1"><td>009</td><td>Pyth</td><td>160905T203444Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/92341#92341">Maltysen</a></td></tr>
-<tr d-ix="2"><td>008</td><td>Pyth</td><td>160905T063057Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/92265#92265">Steven H</a></td></tr>
-<tr d-ix="3"><td>100</td><td>Javascript ES6</td><td>160903T140352Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/92128#92128">Arnauld</a></td></tr>
-<tr d-ix="4"><td>090</td><td>JavaScript ES6</td><td>160905T083615Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/92278#92278">edc65</a></td></tr>
-<tr d-ix="5"><td>048</td><td>Perl</td><td>160905T060111Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/92264#92264">Ton Hosp</a></td></tr>
-<tr d-ix="6"><td>011</td><td>Pyth</td><td>160903T180740Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/92150#92150">TheBikin</a></td></tr>
-<tr d-ix="7"><td>097</td><td>Ruby</td><td>160903T080359Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/92105#92105">cia_rana</a></td></tr>
-<tr d-ix="8"><td>082</td><td>Mathematica</td><td>160903T165916Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/92142#92142">DavidC</a></td></tr>
-<tr d-ix="9"><td>063</td><td>Haskell</td><td>160903T090620Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/92108#92108">nimi</a></td></tr>
-<tr d-ix="10"><td>006</td><td>Jelly</td><td>160903T070643Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/92103#92103">Sp3000</a></td></tr>
+<tr d-ix="0"><td>005</td><td>Brachylog</td><td>240910T083149Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/275448#275448">Fatalize</a></td></tr>
+<tr d-ix="1"><td>011</td><td>Husk</td><td>240910T080322Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/275447#275447">int 21h </a></td></tr>
+<tr d-ix="2"><td>009</td><td>Pyth</td><td>160905T203444Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/92341#92341">Maltysen</a></td></tr>
+<tr d-ix="3"><td>008</td><td>Pyth</td><td>160905T063057Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/92265#92265">Steven H</a></td></tr>
+<tr d-ix="4"><td>100</td><td>Javascript ES6</td><td>160903T140352Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/92128#92128">Arnauld</a></td></tr>
+<tr d-ix="5"><td>090</td><td>JavaScript ES6</td><td>160905T083615Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/92278#92278">edc65</a></td></tr>
+<tr d-ix="6"><td>048</td><td>Perl</td><td>160905T060111Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/92264#92264">Ton Hosp</a></td></tr>
+<tr d-ix="7"><td>011</td><td>Pyth</td><td>160903T180740Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/92150#92150">TheBikin</a></td></tr>
+<tr d-ix="8"><td>097</td><td>Ruby</td><td>160903T080359Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/92105#92105">cia_rana</a></td></tr>
+<tr d-ix="9"><td>082</td><td>Mathematica</td><td>160903T165916Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/92142#92142">DavidC</a></td></tr>
+<tr d-ix="10"><td>063</td><td>Haskell</td><td>160903T090620Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/92108#92108">nimi</a></td></tr>
+<tr d-ix="11"><td>006</td><td>Jelly</td><td>160903T070643Z</td><td><a href="https://codegolf.stackexchange.com/questions/92101/find-every-digit-from-the-largest-column/92103#92103">Sp3000</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/barbuz/Husk" rel="nofollow noreferrer">Husk</a>, 11 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 5 bytes</h1>
+<pre><code>z₁+ᵒt
+</code></pre>
+<p><a href="https://tio.run/##SypKTM6ozMlPN/r/v@pRU6P2w62TSv7/jzY0MtZRMNdRMLHUUTCzMIz9HwUA" rel="nofollow noreferrer" title="Brachylog – Try It Online">Try it online!</a></p>
+<h3>Explanation</h3>
+<pre><code>z₁      Zip digits without cycling
+  +ᵒ    Order the lists of digits by sum
+    t   Output the last list
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/barbuz/Husk" rel="nofollow noreferrer">Husk</a>, 11 bytes</h1>
 <pre><code>S!oS€▲mΣTmd
 </code></pre>
 <p><a href="https://tio.run/##NYy9DQIxFINnoXeR95PkZY6ji9JRIKGIAjEANwQL0FIxCENkkdw7JCQX9mfZ5/vtMvtYH3M5XJexvsfz07@vYz/NOWslFmRoQTJqqARil7gtllNUYUf0q2gvRWPKVjwrDBRBCX6h/CcMdpIh5oQVcf9yKsF9SB4kgM2HTK1t" rel="nofollow noreferrer" title="Husk – Try It Online">Try it online!</a></p>
@@ -55,12 +66,12 @@ S!          # Another S-combinator: take the nth item of
   o     Tmd # ...the earlier calculated transposed list
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>Pyth - 9 bytes</h1>
+<div id="pu2" class="pu"><h1>Pyth - 9 bytes</h1>
 <pre><code>esD_.TjRT
 </code></pre>
 <p><a href="http://pyth.herokuapp.com/?code=esD_.TjRT&amp;test_suite=1&amp;test_suite_input=%5B1%2C+11%2C+111%2C+1111%5D%0A%5B1%2C+12%2C+123%5D%0A%5B987654321%2C+111%5D%0A%5B111%2C+123456789%5D%0A%5B4%2C+8%2C+15%2C+16%2C+23%2C+42%5D%0A%5B4%2C+8%2C+12%2C+26%2C+27%2C+38%5D%0A%5B24%2C+53%5D%0A%5B12%2C+304%2C+506%5D%0A%5B30%2C+285%2C+121%5D&amp;debug=0" rel="nofollow noreferrer">Test Suite</a>.</p>
 </div>
-<div id="pu2" class="pu"><h1>Pyth, <s>5</s> 8 bytes</h1>
+<div id="pu3" class="pu"><h1>Pyth, <s>5</s> 8 bytes</h1>
 <pre><code>esDsMM.T
 </code></pre>
 <p>Takes in input as a list of strings, outputs as a nothing-separated list of digits.</p>
@@ -72,7 +83,7 @@ S!          # Another S-combinator: take the nth item of
 e         take last element, implicitly print
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h2>Javascript (ES6), <s>108</s> <s>103</s> 100 bytes</h2>
+<div id="pu4" class="pu"><h2>Javascript (ES6), <s>108</s> <s>103</s> 100 bytes</h2>
 
 <p>It's a bit verbose and could probably be golfed some more with a different approach. I wish I could get rid of this <code>.filter(n=&gt;n)</code>.</p>
 
@@ -102,7 +113,7 @@ console.log(f(["30", "285", "121"]).join`,`);                // --&gt; [0, 8, 2]
 </div>
 </p>
 </div>
-<div id="pu4" class="pu"><h1>JavaScript (ES6), 90</h1>
+<div id="pu5" class="pu"><h1>JavaScript (ES6), 90</h1>
 <pre class="lang-js prettyprint-override"><code>(l,x)=&gt;[...l+0].map((t,i)=&gt;l.map(n=&gt;(n=n[i])&amp;&amp;(v-=n,t.push(n)),v=t=[])|v&gt;=x||(x=v,r=t))&amp;&amp;r
 </code></pre>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
@@ -133,7 +144,7 @@ console.log(f(["30", "285", "121"]).join`,`);                // --&gt; [0, 8, 2]
 </div>
 </p>
 </div>
-<div id="pu5" class="pu"><h1>Perl, <s>49</s> 48 bytes</h1>
+<div id="pu6" class="pu"><h1>Perl, <s>49</s> 48 bytes</h1>
 
 <p>Includes +1 for <code>-p</code></p>
 
@@ -152,7 +163,7 @@ console.log(f(["30", "285", "121"]).join`,`);                // --&gt; [0, 8, 2]
 s/./@;[@-].="+$&amp;"/eg}{($_)=sort{eval"$b&lt;=&gt;$a"}@
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1>Pyth, 11 bytes</h1>
+<div id="pu7" class="pu"><h1>Pyth, 11 bytes</h1>
 <pre><code>h.MsZ.TmjdT
 </code></pre>
 <p>A program that takes input of a list of integers on STDIN and prints a list.</p>
@@ -167,20 +178,20 @@ h            First element of above
              Implicitly print
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h2>Ruby, <s>100</s> 97 bytes</h2>
+<div id="pu8" class="pu"><h2>Ruby, <s>100</s> 97 bytes</h2>
 
 <pre><code>a=$&lt;.map &amp;:chomp
 puts a.map(&amp;:size).max.times.map{|i|a.map{|e|e[i]}.compact}.max_by{|e|eval e*?+}
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1>Mathematica 82 bytes</h1>
+<div id="pu9" class="pu"><h1>Mathematica 82 bytes</h1>
 <p>This pads the digits of each number with x's to the right, transposes the matrix, removes the dummy x's, orders by sum of the digits and takes the greatest.</p>
 <pre><code>SortBy[#~Select~NumberQ&amp;/@Transpose[PadRight[#,30,x]&amp;/@IntegerDigits@#],Tr][[-1]]&amp;
 </code></pre>
 <hr />
 <p>There ought to be some way to use the superscript-T form of <code>Transpose</code> to save a few bytes.</p>
 </div>
-<div id="pu9" class="pu"><h2>Haskell, 63 bytes</h2>
+<div id="pu10" class="pu"><h2>Haskell, 63 bytes</h2>
 
 <pre><code>import Data.Lists
 argmax sum.transpose.map(map(read.pure).show)
@@ -197,7 +208,7 @@ argmax sum                                     -- find the element with the
                                                -- largest sum
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h2><a href="https://github.com/DennisMitchell/jelly">Jelly</a>, 6 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page">bytes</a></h2>
+<div id="pu11" class="pu"><h2><a href="https://github.com/DennisMitchell/jelly">Jelly</a>, 6 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page">bytes</a></h2>
 
 <pre><code>DZṚSÞṪ
 </code></pre>
