--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240910T105437Z
+"   /golfscore                                      20240910T110544Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/12368.html">Print every character your program doesnt have  : 0012368</a>
 <a href="q/85088.html">Print the ASCII printable character set         : 0085088</a>
 <a href="q/249247.html">Print the ASCII Code page                       : 0249247</a>
 <a href="q/77857.html">Expand a C array                                : 0077857</a>
