--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240910T111843Z
+"   /golfscore                                      20240910T112711Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/154641.html">Create a square of increasing size by replicatin: 0154641</a>
 <a href="q/12368.html">Print every character your program doesnt have  : 0012368</a>
 <a href="q/85088.html">Print the ASCII printable character set         : 0085088</a>
 <a href="q/249247.html">Print the ASCII Code page                       : 0249247</a>
