--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240910T122648Z
+"   /golfscore                                      20240910T125723Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/70847.html">This Challenge Makes Cents                      : 0070847</a>
 <a href="q/233618.html">Distances between keys on a QWERTY keyboard     : 0233618</a>
 <a href="q/154641.html">Create a square of increasing size by replicatin: 0154641</a>
 <a href="q/12368.html">Print every character your program doesnt have  : 0012368</a>
